:sparkles: 添加数据源初始化自动配置功能
- 新增 DataSourceInitializationAutoConfiguration 实现数据源初始化自动配置
- 添加 ApplicationDataSourceScriptDatabaseInitializer 处理应用脚本数据库初始化
- 实现 DataSourceScriptDatabaseInitializer 用于数据源脚本执行
- 添加 DataSourceScriptDatabaseInitializerDetector 检测数据库初始化器
- 集成 InfraJdbcDependsOnDatabaseInitializationDetector 处理依赖关系
- 新增 PlatformPlaceholderDatabaseDriverResolver 解析平台占位符
- 在 build.gradle 中添加对 infra-sql 模块的可选依赖
- 更新测试类验证数据源初始化配置正确性
- 修改 FlywayAutoConfiguration 使用 DisableDIAutoConfiguration 注解
- 修复 FilteredClassLoader 异常消息传递问题